대화목록, 캘린더 기능 추가(#77)