@@ -2,210 +2,91 @@ package com.aikids.care.domain.chat.service;
 
 import com.aikids.care.domain.chat.dto.*;
 import com.aikids.care.domain.chat.model.*;
-import com.aikids.care.domain.chat.repository.ChatDetailRepository;
 import com.aikids.care.domain.chat.repository.ChatRepository;
-import com.aikids.care.domain.child.repository.ChildRepository;
-import com.aikids.care.domain.user.model.SocialType;
-import com.aikids.care.domain.user.model.User;
-import com.aikids.care.domain.user.model.UserRepository;
-import com.aikids.care.global.error.CustomException;
-import com.aikids.care.global.error.ErrorCode;
-import com.aikids.care.infra.gemini.GeminiApiClient;
-import com.aikids.care.infra.stt.GoogleSttClient;
-import jakarta.persistence.EntityNotFoundException;
+import com.aikids.care.domain.chat.repository.ChatDetailRepository;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.transaction.support.TransactionTemplate;
-import org.springframework.web.multipart.MultipartFile;
-import reactor.core.publisher.Flux;
-import reactor.core.publisher.Mono;
-import reactor.core.scheduler.Schedulers;
+import com.fasterxml.jackson.databind.ObjectMapper;
 
-import java.io.IOException;
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
-@Service
 @Slf4j
+@Service
+@Transactional(readOnly = true)
 @RequiredArgsConstructor
 public class ChatService {
 
-    private static final int MAX_HISTORY_MESSAGES = 20; // 최근 10턴
-    private static final int INTERIM_SUMMARY_TRIGGER = 30; // 이 수 이상이면 중간 요약 생성
-
     private final ChatRepository chatRepository;
     private final ChatDetailRepository chatDetailRepository;
-    private final ChatMessagePersistence chatMessagePersistence;
-    private final GoogleSttClient googleSttClient;
-    private final VoiceChatStreamPipeline voiceChatStreamPipeline;
-    private final GeminiApiClient geminiApiClient;
-    private final ChatAiService chatAiService;
-    private final TransactionTemplate transactionTemplate;
-    private final UserRepository userRepository;
-    private final ChildRepository childRepository;
+    private final GeminiService geminiService;
 
+    // 1. 새로운 상담 세션(빈 방) 생성
     @Transactional
-    public Long createChat(String socialId, SocialType socialType, ChatCreateRequest request) {
-        User user = userRepository.findBySocialIdAndSocialType(socialId, socialType)
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        childRepository.findByIdAndUser_Id(request.getChildId(), user.getId())
-                .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN));
+    public Long createChat(ChatCreateRequest request) {
         Chat chat = Chat.builder()
                 .childId(request.getChildId())
                 .build();
         return chatRepository.save(chat).getId();
     }
 
+    // 2. 메시지 전송 및 AI 답변 받기
+    @Transactional
     public String sendMessage(Long chatId, ChatMessageRequest request) {
-        return sendTextMessage(chatId, request.getContent(), request.getImageUrl());
-    }
+        // 1) 채팅방 찾기
+        Chat chat = chatRepository.findById(chatId)
+                .orElseThrow(() -> new IllegalArgumentException("채팅방이 없습니다."));
 
-    public VoiceChatResponse sendVoiceMessage(Long chatId, MultipartFile audioFile) throws IOException {
-        String userQuestion = googleSttClient.transcribe(
-                audioFile.getBytes(),
-                audioFile.getContentType(),
-                audioFile.getOriginalFilename()
-        );
-        log.info("[STT] chatId={}, transcript='{}'", chatId, abbreviate(userQuestion, 200));
-        if (userQuestion.isBlank()) {
-            return new VoiceChatResponse("", "음성을 인식하지 못했습니다. 다시 말해 주세요.");
-        }
-        String aiAnswer = sendTextMessage(chatId, userQuestion, null);
-        return new VoiceChatResponse(userQuestion, aiAnswer);
-    }
+        // 2) 부모가 보낸 메시지(사진 포함)를 DB에 저장
+        ChatDetail userMsg = ChatDetail.builder()
+                .chat(chat)
+                .role(Role.USER)
+                .content(request.getContent())
+                .imageUrl(request.getImageUrl())
+                .build();
+        chatDetailRepository.save(userMsg);
 
-    /**
-     * 음성 상담 SSE 스트리밍: STT → 짧은 답변 텍스트/오디오 청크 → 종료 시 DB 저장.
-     */
-    public Flux<ChatStreamResponse> handleVoiceChatStream(Long chatId, MultipartFile voiceFile) {
-        return Mono.fromCallable(() -> googleSttClient.transcribe(
-                        voiceFile.getBytes(),
-                        voiceFile.getContentType(),
-                        voiceFile.getOriginalFilename()))
-                .subscribeOn(Schedulers.boundedElastic())
-                .flatMapMany(transcript -> buildVoiceStream(chatId, transcript))
-                .onErrorResume(IOException.class, e -> {
-                    log.error("[VoiceStream] STT failed chatId={}", chatId, e);
-                    return Flux.just(
-                            ChatStreamResponse.ofChunk("음성 인식에 실패했습니다. 다시 시도해 주세요.", ""),
-                            ChatStreamResponse.ofFinal()
-                    );
-                });
-    }
+        // 3) AI에게 물어보고 답변 받기
+        String aiContent = geminiService.askQuestion(request.getContent(), request.getImageUrl());
 
-    private Flux<ChatStreamResponse> buildVoiceStream(Long chatId, String transcript) {
-        log.info("[VoiceStream] chatId={}, transcript='{}'", chatId, abbreviate(transcript, 200));
-
-        if (transcript.isBlank()) {
-            return Flux.just(
-                    ChatStreamResponse.ofChunk("음성을 인식하지 못했습니다. 다시 말해 주세요.", ""),
-                    ChatStreamResponse.ofFinal()
-            );
-        }
-
-        return Mono.fromRunnable(() -> chatMessagePersistence.saveUserTranscript(chatId, transcript))
-                .subscribeOn(Schedulers.boundedElastic())
-                .thenMany(voiceChatStreamPipeline.stream(chatId, transcript));
-    }
-
-    // LLM 호출 구간에 DB 커넥션을 점유하지 않도록 TransactionTemplate으로 트랜잭션 분리
-    private String sendTextMessage(Long chatId, String userContent, String imageUrl) {
-        List<ChatDetail> allDetails = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
-        String interimSummary = generateInterimSummaryIfNeeded(chatId, allDetails);
-        List<Map<String, String>> history = toHistory(allDetails);
-
-        transactionTemplate.execute(status -> {
-            Chat chat = chatRepository.findById(chatId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
-            chatDetailRepository.save(ChatDetail.builder()
-                    .chat(chat)
-                    .role(Role.USER)
-                    .content(userContent)
-                    .imageUrl(imageUrl)
-                    .build());
-            return null;
-        });
-
-        String aiContent = geminiApiClient.ask(userContent, history, interimSummary);
-
-        transactionTemplate.execute(status -> {
-            Chat chat = chatRepository.findById(chatId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
-            chatDetailRepository.save(ChatDetail.builder()
-                    .chat(chat)
-                    .role(Role.AI)
-                    .content(aiContent)
-                    .build());
-            return null;
-        });
+        // 4) AI의 답변을 DB에 저장
+        ChatDetail aiMsg = ChatDetail.builder()
+                .chat(chat)
+                .role(Role.AI)
+                .content(aiContent)
+                .build();
+        chatDetailRepository.save(aiMsg);
 
         return aiContent;
     }
 
-    // 히스토리가 INTERIM_SUMMARY_TRIGGER 이상이면 오래된 구간을 요약하고 DB에 저장
-    private String generateInterimSummaryIfNeeded(Long chatId, List<ChatDetail> allDetails) {
-        if (allDetails.size() < INTERIM_SUMMARY_TRIGGER) {
-            return chatRepository.findById(chatId)
-                    .map(Chat::getInterimSummary)
-                    .orElse(null);
-        }
-
-        // 오래된 절반을 요약 대상으로, 최근 절반은 슬라이딩 윈도우로 유지
-        int splitAt = allDetails.size() - MAX_HISTORY_MESSAGES;
-        List<Map<String, String>> oldMessages = allDetails.subList(0, splitAt).stream()
-                .map(d -> Map.of("role", toGeminiRole(d.getRole()), "content", d.getContent()))
-                .toList();
-
-        Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
-        String previousSummary = chat.getInterimSummary();
-        String newSummary = geminiApiClient.summarize(oldMessages, previousSummary);
-
-        transactionTemplate.execute(status -> {
-            Chat c = chatRepository.findById(chatId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
-            c.updateInterimSummary(newSummary);
-            return null;
-        });
-
-        return newSummary;
-    }
-
-    public void closeChat(Long chatId) {
-        List<Map<String, String>> history = loadHistory(chatId);
-        if (history.isEmpty()) return;
-
-        Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
-        String summary = geminiApiClient.summarize(history, chat.getInterimSummary());
-
-        transactionTemplate.execute(status -> {
-            Chat c = chatRepository.findById(chatId)
-                    .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
-            c.updateSummary(summary);
-            return null;
-        });
-    }
-
+    // 3. AI 분석 결과 업데이트 (PATCH API)
     @Transactional
     public void updateChatResult(Long chatId, ChatUpdateRequest request) {
         Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+                .orElseThrow(() -> new IllegalArgumentException("채팅방이 없습니다."));
+
         chat.updateResult(request.getCategory(), request.getRiskLevel());
     }
 
+    // 4. 채팅방 삭제
     @Transactional
     public void deleteChat(Long chatId) {
         Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new CustomException(ErrorCode.CHAT_NOT_FOUND));
+                .orElseThrow(() -> new IllegalArgumentException("채팅방이 없습니다."));
         chatRepository.delete(chat);
     }
 
     public List<ChatDetailResponse> getChatHistory(Long chatId) {
+
+        // 1. 해당 채팅방(chatId)의 대화 내역을 시간순(오래된 것 -> 최신 것)으로 가져옵니다.
         List<ChatDetail> details = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
+
+        // 2. DB 엔티티(ChatDetail)를 프론트엔드용 DTO(ChatDetailResponse)로 변환해서 리스트로 묶어 반환합니다.
         return details.stream()
                 .map(detail -> new ChatDetailResponse(
                         detail.getId(),
@@ -214,67 +95,106 @@ public class ChatService {
                         detail.getImageUrl(),
                         detail.getCreatedAt()
                 ))
-                .toList();
+                .collect(Collectors.toList());
     }
-
-    public List<Long> getChatRoomList(String socialId, SocialType socialType, Long childId) {
-        User user = userRepository.findBySocialIdAndSocialType(socialId, socialType)
-                .orElseThrow(() -> new CustomException(ErrorCode.USER_NOT_FOUND));
-        childRepository.findByIdAndUser_Id(childId, user.getId())
-                .orElseThrow(() -> new CustomException(ErrorCode.FORBIDDEN));
+    // 특정 아이의 상담 방 번호 목록을 최신순으로 조회
+    public List<Long> getChatRoomList(Long childId) {
         return chatRepository.findByChildIdOrderByCreatedAtDesc(childId)
                 .stream()
-                .map(Chat::getId)
-                .toList();
+                .map(chat -> chat.getId())
+                .collect(Collectors.toList());
     }
 
-    private List<Map<String, String>> loadHistory(Long chatId) {
-        List<ChatDetail> details = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
-        return toHistory(details);
+    // 5. 특정 아이의 모든 상담 목록 조회 (GET /api/children/{childId}/chats)
+    public List<ChatListResponse> getChatList(Long childId) {
+        return chatRepository.findByChildIdOrderByCreatedAtDesc(childId)
+                .stream()
+                .map(chat -> ChatListResponse.builder()
+                        .chatId(chat.getId())
+                        .category(chat.getCategory())
+                        .riskLevel(chat.getRiskLevel())
+                        .createdAt(chat.getCreatedAt())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    private List<Map<String, String>> toHistory(List<ChatDetail> details) {
-        List<ChatDetail> recent = details.size() > MAX_HISTORY_MESSAGES
-                ? details.subList(details.size() - MAX_HISTORY_MESSAGES, details.size())
-                : details;
-        return recent.stream()
-                .map(d -> Map.of("role", toGeminiRole(d.getRole()), "content", d.getContent()))
-                .toList();
+    // 6. 특정 날짜에 채팅 기록이 있는지 확인
+    public boolean hasChatHistoryForDate(Long childId, LocalDate date) {
+        LocalDateTime startOfDay = date.atStartOfDay();
+        LocalDateTime endOfDay = date.atTime(23, 59, 59);
+        List<Chat> chats = chatRepository.findByChildIdAndCreatedAtBetween(childId, startOfDay, endOfDay);
+        return !chats.isEmpty();
     }
 
-    private String toGeminiRole(Role role) {
-        return role == Role.USER ? "user" : "model";
-    }
+    private static final String ANALYSIS_PROMPT_TEMPLATE = """
+    너는 소아 건강 상담 내용을 분석하는 전문 AI 의료 보조 시스템이야.
+    아래 제공된 대화 내역을 분석하여, 가장 적절한 증상 카테고리와 위험도를 판별해줘.
 
-    private String abbreviate(String text, int maxLength) {
-        if (text == null) return "";
-        String normalized = text.replaceAll("\\s+", " ").trim();
-        if (normalized.length() <= maxLength) return normalized;
-        return normalized.substring(0, maxLength) + "...";
+    [분류 기준 - Category]
+    - FEVER: 발열 관련
+    - DIGESTIVE: 소화기, 구토, 설사
+    - RESPIRATORY: 호흡기, 기침, 콧물
+    - SKIN: 피부 발진, 두드러기
+    - TRAUMA: 외상, 타박상
+    - ETC: 기타 (위 항목에 속하지 않는 경우)
+
+    [분류 기준 - RiskLevel]
+    - HOME_CARE: 가정 내 처치 및 경과 관찰 가능
+    - CLINIC_VISIT: 가까운 시일 내 외래 진료 권고
+    - EMERGENCY_ROOM: 즉시 응급실 방문 요망
+    - RE_CONSULT: 정보 부족으로 재상담 필요
+
+    반드시 아래 JSON 형식으로만 답변하고, 다른 부가 설명은 절대 하지 마.
+    {
+      "category": "선택한 카테고리",
+      "riskLevel": "선택한 위험도"
     }
+    
+    답변할 때 굵게(**), 기울임(*), 헤더(#) 기호를 사용하지 말아줘."
+    
+    [대화 내역]
+    %s
+    """;
 
     @Transactional
-    public AiAnalysisResponse analyzeChatAndSave(Long chatId) {
-        // 해당 방의 상세 대화 내역 조회 (IsUser가 true면 부모, false면 AI)
-        List<ChatDetail> details = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
-
-        String chatHistory = details.stream()
-                .map(d -> (d.getRole()== Role.USER? "부모: " : "AI: ") + d.getContent())
-                .collect(Collectors.joining("\n"));
-
-        // AI 서비스 호출 (반환 타입 수정됨)
-        AiAnalysisResponse result = chatAiService.analyzeContent(chatHistory);
-
-        // DB 저장 (엔티티의 필드명에 맞춰 수정하세요)
+    public void analyzeAndCloseConsultation(Long chatId) {
+        // 1. 상담방 및 대화 내역 조회
         Chat chat = chatRepository.findById(chatId)
-                .orElseThrow(() -> new EntityNotFoundException("채팅방을 찾을 수 없습니다."));
+                .orElseThrow(() -> new IllegalArgumentException("존재하지 않는 상담방입니다."));
 
-        // chat 엔티티에 분석 결과를 업데이트하는 메서드가 필요합니다.
-        chat.updateAnalysis(
-                Category.valueOf(result.getCategory().toUpperCase()),
-                RiskLevel.valueOf(result.getRiskLevel().toUpperCase())
-        );
+        List<ChatDetail> history = chatDetailRepository.findByChatIdOrderByCreatedAtAsc(chatId);
 
-        return result;
+        // 2. 대화 내역을 하나의 문자열로 합치기
+        StringBuilder conversation = new StringBuilder();
+        for (ChatDetail detail : history) {
+            conversation.append(detail.getRole()).append(": ").append(detail.getContent()).append("\n");
+        }
+
+
+        // 4. 최종 프롬프트 완성
+        String finalPrompt = String.format(ANALYSIS_PROMPT_TEMPLATE, conversation.toString());
+
+        try {
+            // 5. Gemini API 호출
+            String aiResponse = geminiService.askQuestion(finalPrompt,null);
+
+            // 6. JSON 응답 정제 (마크다운 백틱 제거)
+            String cleanJson = aiResponse.replace("```json", "").replace("```", "").trim();
+
+            // 7. JSON 파싱
+            ObjectMapper objectMapper = new ObjectMapper();
+            AiAnalysisResponse analysisResult = objectMapper.readValue(cleanJson, AiAnalysisResponse.class);
+
+            // 8. String을 Enum으로 변환 및 DB 업데이트 (JPA Dirty Checking)
+            Category category = Category.valueOf(analysisResult.getCategory().toUpperCase());
+            RiskLevel riskLevel = RiskLevel.valueOf(analysisResult.getRiskLevel().toUpperCase());
+
+            chat.updateAnalysis(category, riskLevel);
+
+        } catch (Exception e) {
+            log.error("AI 상담 분석 실패: {}", e.getMessage());
+            // 파싱 실패나 예외 발생 시 안전하게 '기타/재상담' 등으로 Fallback 처리
+            chat.updateAnalysis(Category.ETC, RiskLevel.RE_CONSULT);
+        }
     }
 }
